Add ChartJS library

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Signal Processing</title>
-	<script src="./../dist/Chart.bundle.js"></script>
+	<script src="./src/Chart.bundle.js"></script>
 	<script src="./plotter.js"></script>
 	<script src="./namecolors.js"></script>
 	<style>
